Redesign project and office and chat

--- a/src/ZectranetBundle/Resources/views/index.html.twig
+++ b/src/ZectranetBundle/Resources/views/index.html.twig
@@ -211,9 +211,9 @@
 		<div class="modal fade" id="add_private_project" tabindex="-1" role="dialog" aria-hidden="true">
 			<div class="modal-dialog">
 				<div class="modal-content">
-					<div class="modal-header label-primary">
+					<div class="modal-header" style="background:#ddedf4; color:#606060; border-radius: 0px;">
 						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-						<h4 class="modal-title" id="myModalLabel" style="color: #f5f5f5; ">
+						<h4 class="modal-title" id="myModalLabel" style=" color:#606060; ">
 							Add New Private Project
 						</h4>
 					</div>
