--- a/web/bundles/zectranet/templates/chat.html
+++ b/web/bundles/zectranet/templates/chat.html
@@ -3,18 +3,18 @@
         <span class="chat-img"
               ng-class="{'pull-right': USER_ID == post.user.id, 'pull-left': USER_ID != post.user.id }"
               ng-init="avatar = generateAsset(urlAsset, 'documents/' + post.user.avatar)">
-            <img ng-src="[[avatar]]" alt="User Avatar" class="img-circle" style="width: 50px; height: 50px;"/>
+            <img ng-src="[[avatar]]"  class="img-circle" style="width: 50px; height: 50px;"/>
         </span>
         <div class="chat-body clearfix">
-            <div class="header" style="height: 28px;">
+            <div class="header" style="height: 40px;">
                 <strong class="primary-font"
                         ng-class="{'pull-right': USER_ID == post.user.id, 'pull-left': USER_ID != post.user.id }">
-                    [[post.user.name + ' ' + post.user.surname + ' (' + post.user.username + ')' ]]
+                    [[  post.user.username  ]]
                 </strong>
 
                 <small class="text-muted" ng-class="{'pull-left': USER_ID == post.user.id, 'pull-right': USER_ID != post.user.id }">
                     <i class="fa fa-clock-o fa-fw"></i>
-                    Posted on <span style="color: #000000; font-style: italic">[[post.posted]]</span>
+                    <span style="color: #000000; font-style: italic">[[post.posted]]</span>
                     <i ng-if="post.edited" class="fa fa-edit"></i>
                 </small>
             </div>
