--- a/src/ZectranetBundle/Resources/views/office.html.twig
+++ b/src/ZectranetBundle/Resources/views/office.html.twig
@@ -59,7 +59,7 @@
             <div class="list-group">
                 <div class="list-group-item" style="background:#ddedf4; color:#606060;">
                     <i class="fa fa-user fa-fw"></i>
-                    Connected Users
+                    <strong>Connected Users</strong>
                 </div>
                 <div class="list-group-item">
                     <table class="table" style="margin-bottom: 0">
@@ -105,7 +105,7 @@
             <div class="list-group">
                 <div class="list-group-item" style="background:#ddedf4; color:#606060;">
                     <i class="fa fa-briefcase"></i>
-                    <span>Connected Projects</span>
+                    <strong>Connected Projects</strong>
                 </div>
                 {% if office.projects|length > 0 %}
                     {% for project in office.projects %}
@@ -128,7 +128,13 @@
             <div class="list-group">
                 <div class="list-group-item" style="background:#ddedf4; color:#606060;">
                     <i class="fa fa-repeat"></i>
-                    Office Sprints
+                    <strong> Office Sprints</strong>
+                    <div style="float: right;">
+                        <a style="color:#606060 !important;" class="addnew-btn-hover" data-toggle="modal" data-target="#add_sprint" href="#">
+                            <i class="fa fa-plus-circle"></i> New Sprint
+                        </a>
+                    </div>
+
                 </div>
                 {% for sprint in office.sprints %}
                     <a class="list-group-item" href="{{ path('zectranet_show_sprint', {'sprint_id': sprint.id, 'office_id': office.id }) }}">
@@ -141,16 +147,6 @@
                         <h4 class="text-info text-center">Sprints will be displayed here</h4>
                     </div>
                 {% endif %}
-                <div class="list-group-item" style="padding: 0px;">
-                <a class="addnew-btn-hover" data-toggle="modal" data-target="#add_sprint" href="#">
-                    <div class="addnew-btn">
-                        <h5 class="text-center" style="padding-top:15px;color:#606060;">
-                            <i class="fa fa-plus-circle"></i>
-                            Add New Epic Story
-                        </h5>
-                    </div>
-                </a>
-                </div>
             </div>
         </div>
         <!-- END OF SPRINT LIST -->
@@ -163,7 +159,7 @@
     <div class="chat-panel list-group" ng-controller="ChatController" ng-init="getPosts(0, 100)">
         <div class="list-group-item" style="background:#ddedf4; color:#606060;">
             <i class="fa fa-comments fa-fw"></i>
-            Office Chat
+            <strong>Office Chat</strong>
         </div>
         <div id="posts-panel" class="list-group-item panel-body" style="max-height: 300px;">
             {% if office.postsOffice | length == 0 %}
