--- a/src/ZectranetBundle/Resources/views/project.html.twig
+++ b/src/ZectranetBundle/Resources/views/project.html.twig
@@ -44,21 +44,19 @@
 
 
         <div class="row">
-        <div class="col-md-6">
-
             <div class="col-xs-12 col-md-12">
+                <div class="col-xs-12 col-md-12">
                 <blockquote>
-                    <p>{{ project.description }}</p>
                     <footer>
                         <cite title="Source Title">Project Description</cite>
                     </footer>
+
+                    <p>{{ project.description }}</p>
+
                 </blockquote>
+                </div>
             </div>
-
-
-
-
-
+        <div class="col-md-6">
 
             <!-- BEGIN OF OFFICE USERS PANEL -->
             <div class="col-md-12 col-xs-12">
@@ -131,7 +129,7 @@
 
                     </div>
                     <div cg-busy="promiseProject">
-                        <div style="max-height: 168px; overflow-y: auto;">
+                        <div style="max-height: 220px; overflow-y: auto;">
 
                             <a class="list-group-item" style="cursor: pointer;"
                                ng-click="changeCurrentPage({{ project.id }}); removeHighlightFromEpicStories();">
@@ -147,9 +145,6 @@
                                 <i class="fa fa-briefcase"></i>
                                 [[ story.name ]]
                             </a>
-                            <div class="list-group-item" ng-if="epicStories.length == 0">
-                                <h4 class="text-center text-info">Epic Stories will be displayed here</h4>
-                            </div>
                         </div>
 
 
