--- a/src/ZectranetBundle/Resources/views/user.html.twig
+++ b/src/ZectranetBundle/Resources/views/user.html.twig
@@ -16,6 +16,13 @@
             <div class="panel panel-default" style=" border-radius: 0px;">
                 <div class="panel-heading" style="background:#ddedf4; color:#606060; border-radius: 0px;">
                     <h4 class="private-office"><i class="fa fa-home"></i> Private Offices</h4>
+
+                        <a style="float: right; position: relative; margin-top: -25px; color:#606060 !important;" class="addnew-btn-hover hidden-md" data-toggle="modal" data-target="#add_private_office" href="#">
+                            <i class="fa fa-plus-circle"></i> New Offices
+                        </a>
+                        <a style="color:#606060 !important;" class="addnew-btn-hover visible-md" data-toggle="modal" data-target="#add_private_office" href="#">
+                            <i class="fa fa-plus-circle"></i> New Offices
+                        </a>
                 </div>
                 <div class="row">
                     {% set officesCount = app.user.ownedOffices | length %}
@@ -30,7 +37,7 @@
 
                     {% for office in app.user.ownedOffices | reverse | slice(0, 3) %}
                         <a href="{{ path('zectranet_show_office', {'office_id': office.id}) }}">
-                            <div class="col-xs-3" style="margin-top:5px;">
+                            <div class="col-xs-3 hidden-md" style="margin-top:5px;">
                                 <img src="{{ asset('bundles/zectranet/img/officeimg.png') }}" height="80">
                             </div>
                             <div class="col-xs-9" style="min-height: 85px;">
@@ -43,7 +50,7 @@
                     <div id="private_office_collapse" class="panel-collapse collapse" aria-expanded="false">
                         {% for office in app.user.ownedOffices | reverse | slice(3, officesCount) %}
                             <a href="{{ path('zectranet_show_office', {'office_id': office.id}) }}">
-                                <div class="col-xs-3" style="margin-top:5px;">
+                                <div class="col-xs-3 hidden-md" style="margin-top:5px;">
                                     <img src="{{ asset('bundles/zectranet/img/officeimg.png') }}" height="80">
                                 </div>
                                 <div class="col-xs-9" style="min-height: 85px;">
@@ -54,22 +61,16 @@
                         {% endfor %}
                     </div>
 
-
                     {% if officesCount > 3 %}
-                    <a data-toggle="collapse" href="#private_office_collapse" aria-expanded="false"  class="text-center">
-                        <div class="col-xs-12 text-center" style="min-height: 20px;">
-                            <i class="fa fa-list-alt"></i> Show all
-                        </div>
-                    </a>
-                    {% endif %}
-
                     <div class="col-xs-12" style="min-height: 50px;">
-                        <a href="#" class="addnew-btn-hover"  data-toggle="modal" data-target="#add_private_office">
+                        <a class="addnew-btn-hover" data-toggle="collapse" href="#private_office_collapse" aria-expanded="false" >
                             <div class="addnew-btn">
-                                <h4 class="text-center" style="padding-top:15px;color:#606060;"> <i class="fa fa-plus-circle"></i> Add new Offices</h4>
+                                <h4 class="text-center" style="padding-top:15px;color:#606060;"> <i class="fa fa-list-alt"></i> Show all</h4>
                             </div>
                         </a>
                     </div>
+                    {% endif %}
+
 
                 </div>
             </div>
@@ -83,6 +84,14 @@
     <div class="panel panel-default" style=" border-radius: 0px;">
         <div class="panel-heading" style="background:#ddedf4; color:#606060; border-radius: 0px;">
             <h4 class="private-office"><i class="fa fa-briefcase"></i> Private Projects </h4>
+
+            <a style="float: right; position: relative; margin-top: -25px; color:#606060 !important;" class="addnew-btn-hover hidden-md" data-toggle="modal" data-target="#add_private_project" href="#">
+                <i class="fa fa-plus-circle"></i> New project
+            </a>
+            <a style="color:#606060 !important;" class="addnew-btn-hover visible-md" data-toggle="modal" data-target="#add_private_project" href="#">
+                <i class="fa fa-plus-circle"></i> New project
+            </a>
+
         </div>
         <div class="row">
 
@@ -104,7 +113,7 @@
             {% for project in app.user.ownedProjects | reverse | slice(0, 3) %}
                 {% if project.parent == null %}
                     <a href="{{ path('zectranet_show_project', {'project_id': project.id }) }}">
-                        <div class="col-xs-3" style="margin-top:5px;">
+                        <div class="col-xs-3 hidden-md" style="margin-top:5px;">
                             <img src="{{ asset('bundles/zectranet/img/projectimg.png') }}" height="80">
                         </div>
                         <div class="col-xs-9" style="min-height: 85px;">
@@ -119,7 +128,7 @@
                 {% for project in app.user.ownedProjects | reverse | slice(3, projectsCount) %}
                     {% if project.parent == null %}
                         <a href="{{ path('zectranet_show_project', {'project_id': project.id }) }}">
-                            <div class="col-xs-3" style="margin-top:5px;">
+                            <div class="col-xs-3 hidden-md" style="margin-top:5px;">
                                 <img src="{{ asset('bundles/zectranet/img/projectimg.png') }}" height="80">
                             </div>
                             <div class="col-xs-9" style="min-height: 85px;">
@@ -131,21 +140,16 @@
                 {% endfor %}
             </div>
 
-
             {% if projectsCount > 3 %}
-                <a data-toggle="collapse" href="#private_project_collapse" aria-expanded="false" class="text-center">
-                    <div class="col-xs-12 text-center" style="min-height: 20px;">
-                        <i class="fa fa-list-alt"></i> Show all
-                    </div>
-                </a>
+                <div class="col-xs-12" style="min-height: 50px;">
+                    <a class="addnew-btn-hover" data-toggle="collapse" href="#private_project_collapse" aria-expanded="false" >
+                        <div class="addnew-btn">
+                            <h4 class="text-center" style="padding-top:15px;color:#606060;"> <i class="fa fa-list-alt"></i> Show all</h4>
+                        </div>
+                    </a>
+                </div>
             {% endif %}
-            <div class="col-xs-12" style="min-height: 50px;">
-                <a href="#" class="addnew-btn-hover" data-toggle="modal" data-target="#add_private_project">
-                    <div class="addnew-btn">
-                        <h4 class="text-center" style="padding-top:15px;color:#606060;"> <i class="fa fa-plus-circle"></i> Add new Project</h4>
-                    </div>
-                </a>
-            </div>
+
 
             </div>
         </div>
@@ -181,7 +185,7 @@
 
             {% for sprint in sharedSprints | reverse | slice(0, 3) %}
                 <a href="{{ path('zectranet_show_project', {'project_id': sprint.id }) }}">
-                    <div class="col-xs-3" style="margin-top:5px;">
+                    <div class="col-xs-3 hidden-md" style="margin-top:5px;">
                         <img src="{{ asset('bundles/zectranet/img/sprintimg.png') }}" height="80">
                     </div>
                     <div class="col-xs-9" style="min-height: 85px;">
@@ -193,7 +197,7 @@
             <div id="connected_sprint_collapse" class="panel-collapse collapse" aria-expanded="false">
                 {% for sprint in sharedSprints | reverse | slice(3, sprintsCount) %}
                     <a href="{{ path('zectranet_show_project', {'project_id': sprint.id }) }}">
-                        <div class="col-xs-3" style="margin-top:5px;">
+                        <div class="col-xs-3 hidden-md" style="margin-top:5px;">
                             <img src="{{ asset('bundles/zectranet/img/sprintimg.png') }}" height="80">
                         </div>
                         <div class="col-xs-9" style="min-height: 85px;">
@@ -203,13 +207,18 @@
                     </a>
                 {% endfor %}
             </div>
-            {% if sprintsCount > 3 %}
-                <a data-toggle="collapse" href="#connected_sprint_collapse" aria-expanded="false" class="text-center">
-                    <div class="col-xs-12 text-center" style="min-height: 32px; margin-top: 15px;">
-                        <i class="fa fa-list-alt"></i> Show all
+
+                {% if sprintsCount > 3 %}
+                    <div class="col-xs-12" style="min-height: 50px;">
+                        <a class="addnew-btn-hover" data-toggle="collapse" href="#connected_sprint_collapse" aria-expanded="false" >
+                            <div class="addnew-btn">
+                                <h4 class="text-center" style="padding-top:15px;color:#606060;"> <i class="fa fa-list-alt"></i> Show all</h4>
+                            </div>
+                        </a>
                     </div>
-                </a>
-            {% endif %}
+                {% endif %}
+
+
             </div>
             </div>
         </div>
@@ -240,7 +249,7 @@
 
             {% for office in app.user.assignedOffices | reverse | slice(0, 3) %}
                 <a href="{{ path('zectranet_show_office', {'office_id': office.id}) }}">
-                    <div class="col-xs-3" style="margin-top:5px;">
+                    <div class="col-xs-3 hidden-md" style="margin-top:5px;">
                         <img src="{{ asset('bundles/zectranet/img/officeimg.png') }}" height="80">
                     </div>
                     <div class="col-xs-9" style="min-height: 85px;">
@@ -253,7 +262,7 @@
             <div id="connected_office_collapse" class="panel-collapse collapse" aria-expanded="false">
                 {% for office in app.user.assignedOffices | reverse | slice(3, officesCount) %}
                     <a href="{{ path('zectranet_show_office', {'office_id': office.id}) }}">
-                        <div class="col-xs-3" style="margin-top:5px;">
+                        <div class="col-xs-3 hidden-md" style="margin-top:5px;">
                             <img src="{{ asset('bundles/zectranet/img/officeimg.png') }}" height="80">
                         </div>
                         <div class="col-xs-9" style="min-height: 85px;">
@@ -263,13 +272,17 @@
                     </a>
                 {% endfor %}
             </div>
+
             {% if officesCount > 3 %}
-                <a data-toggle="collapse" href="#connected_office_collapse" aria-expanded="false" class="text-center">
-                    <div class="col-xs-12 text-center" style="min-height: 32px; margin-top: 15px;">
-                        <i class="fa fa-list-alt"></i> Show all
-                    </div>
-                </a>
+                <div class="col-xs-12" style="min-height: 50px;">
+                    <a class="addnew-btn-hover" data-toggle="collapse" href="#connected_office_collapse" aria-expanded="false" >
+                        <div class="addnew-btn">
+                            <h4 class="text-center" style="padding-top:15px;color:#606060;"> <i class="fa fa-list-alt"></i> Show all</h4>
+                        </div>
+                    </a>
+                </div>
             {% endif %}
+
             </div>
         </div>
         </div>
@@ -310,7 +323,7 @@
             {% for project in connectedProjects | slice(0, 3) %}
                 {% if project.parent == null %}
                     <a href="{{ path('zectranet_show_project', {'project_id': project.id }) }}">
-                        <div class="col-xs-3" style="margin-top:5px;">
+                        <div class="col-xs-3 hidden-md" style="margin-top:5px;">
                             <img src="{{ asset('bundles/zectranet/img/projectimg.png') }}" height="80">
                         </div>
                         <div class="col-xs-9" style="min-height: 85px;">
@@ -325,7 +338,7 @@
                 {% for project in connectedProjects | slice(3, projectsCount) %}
                     {% if project.parent == null %}
                         <a href="{{ path('zectranet_show_project', {'project_id': project.id }) }}">
-                            <div class="col-xs-3" style="margin-top:5px;">
+                            <div class="col-xs-3 hidden-md" style="margin-top:5px;">
                                 <img src="{{ asset('bundles/zectranet/img/projectimg.png') }}" height="80">
                             </div>
                             <div class="col-xs-9" style="min-height: 85px;">
@@ -336,13 +349,20 @@
                     {% endif %}
                 {% endfor %}
             </div>
+
+
             {% if projectsCount > 3 %}
-                <a data-toggle="collapse" href="#connected_project_collapse" class="text-center">
-                    <div class="col-xs-12 text-center" style="min-height: 32px; margin-top: 15px;">
-                        <i class="fa fa-list-alt"></i> Show all
-                    </div>
-                </a>
+                <div class="col-xs-12" style="min-height: 50px;">
+                    <a class="addnew-btn-hover" data-toggle="collapse" href="#connected_project_collapse" aria-expanded="false" >
+                        <div class="addnew-btn">
+                            <h4 class="text-center" style="padding-top:15px;color:#606060;"> <i class="fa fa-list-alt"></i> Show all</h4>
+                        </div>
+                    </a>
+                </div>
             {% endif %}
+
+
+
             </div>
         </div>
         </div>
@@ -377,7 +397,7 @@
 
             {% for sprint in sharedSprints | reverse | slice(0, 3) %}
                 <a href="{{ path('zectranet_show_project', {'project_id': sprint.id }) }}">
-                    <div class="col-xs-3" style="margin-top:5px;">
+                    <div class="col-xs-3 hidden-md" style="margin-top:5px;">
                         <img src="{{ asset('bundles/zectranet/img/sprintimg.png') }}" height="80">
                     </div>
                     <div class="col-xs-9" style="min-height: 85px;">
@@ -389,7 +409,7 @@
             <div id="connected_sprint_collapse" class="panel-collapse collapse" aria-expanded="false">
                 {% for sprint in sharedSprints | reverse | slice(3, sprintsCount) %}
                     <a href="{{ path('zectranet_show_project', {'project_id': sprint.id }) }}">
-                        <div class="col-xs-3" style="margin-top:5px;">
+                        <div class="col-xs-3 hidden-md" style="margin-top:5px;">
                             <img src="{{ asset('bundles/zectranet/img/sprintimg.png') }}" height="80">
                         </div>
                         <div class="col-xs-9" style="min-height: 85px;">
@@ -399,13 +419,19 @@
                     </a>
                 {% endfor %}
             </div>
+
             {% if projectsCount > 3 %}
-                <a data-toggle="collapse" href="#connected_sprint_collapse" class="text-center">
-                    <div class="col-xs-12 text-center" style="min-height: 32px; margin-top: 15px;">
-                        <i class="fa fa-list-alt"></i> Show all
-                    </div>
-                </a>
+                <div class="col-xs-12" style="min-height: 50px;">
+                    <a class="addnew-btn-hover" data-toggle="collapse" href="#connected_sprint_collapse" aria-expanded="false" >
+                        <div class="addnew-btn">
+                            <h4 class="text-center" style="padding-top:15px;color:#606060;"> <i class="fa fa-list-alt"></i> Show all</h4>
+                        </div>
+                    </a>
+                </div>
             {% endif %}
+
+
+
         </div>
     </div>
     </div>
